Simple tokenizer is now fully functional.

--- a/cs336_basics/tokenizer.ipynb
+++ b/cs336_basics/tokenizer.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['low', 'low', 'low', 'low', 'low', 'lower', 'lower', 'widest', 'widest', 'widest', 'newest', 'newest', 'newest', 'newest', 'newest', 'newest']\n",
+      "defaultdict(<class 'int'>, {'low': 5, 'lower': 2, 'widest': 3, 'newest': 6})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pre_tokens)\n",
+    "\n",
+    "pre_token_counts = defaultdict(int)\n",
+    "for t in pre_tokens:\n",
+    "    pre_token_counts[t] +=1\n",
+    "\n",
+    "print(pre_token_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_token(token):\n",
+    "    if isinstance(token, int):\n",
+    "        # Single-byte integer token\n",
+    "        return bytes([token]).decode(\"utf-8\", errors='replace')\n",
+    "    elif isinstance(token, tuple):\n",
+    "        # Tuple token, decode recursively\n",
+    "        return \"\".join(decode_token(st) for st in token)\n",
+    "    else:\n",
+    "        # Special tokens, represented as strings\n",
+    "        return str(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_freq_pair = ((65, 66), 67)  # AB + C\n",
+    "print(decode_token(most_freq_pair))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -214,25 +274,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Next tooken id =  257\n",
+      "Merge #1: (115, 116), Count: 9\n",
+      "s t, Count: 9\n",
+      "Merge #2: (101, (115, 116)), Count: 9\n",
+      "e st, Count: 9\n",
+      "Merge #3: (111, 119), Count: 7\n",
+      "o w, Count: 7\n",
+      "Merge #4: (108, (111, 119)), Count: 7\n",
+      "l ow, Count: 7\n",
+      "Merge #5: (119, (101, (115, 116))), Count: 6\n",
+      "w est, Count: 6\n",
+      "Merge #6: (110, 101), Count: 6\n",
+      "n e, Count: 6\n"
+     ]
+    }
+   ],
    "source": [
+    "num_merges = 6\n",
     "\n",
-    "num_merges = 10\n",
+    "next_token_id = len(vocab)\n",
+    "print(\"Next tooken id = \", next_token_id)\n",
     "\n",
     "tokens = pre_tokens_bytes\n",
-    "for _ in range(num_merges):\n",
+    "for merge_idx in range(num_merges):\n",
     "    pair_counts = calc_pair_counts(tokens)\n",
     "    if not pair_counts:\n",
     "        break\n",
     "    \n",
-    "    # Step 4: Find most frequent pair (lexicographically greatest on ties)\n",
-    "    most_freq_pair = max(pair_counts, key=lambda p: (pair_counts[p], p))\n",
-    "    \n",
+    "    # Find most frequent pair (lexicographically greatest on ties)\n",
+    "    most_freq_pair = max(pair_counts, key=lambda p: (pair_counts[p], decode_token(p)))\n",
     "    print(f\"Merge #{merge_idx + 1}: {most_freq_pair}, Count: {pair_counts[most_freq_pair]}\")\n",
+    "    t1 = decode_token(most_freq_pair[0])\n",
+    "    t2 = decode_token(most_freq_pair[1])\n",
+    "    print(f\"{t1} {t2}, Count: {pair_counts[most_freq_pair]}\")\n",
     "\n",
-    "    # TODO: Implement logic to replace occurrences of most_freq_pair"
+    "    vocab[most_freq_pair] = next_token_id\n",
+    "    next_token_id += 1\n",
+    "\n",
+    "    new_tokens = []\n",
+    "    for t in tokens:\n",
+    "        new_t = []\n",
+    "        i = 0\n",
+    "        while i < len(t):\n",
+    "            if i < (len(t) - 1) and (t[i], t[i + 1]) == most_freq_pair:\n",
+    "                new_t.append(most_freq_pair)\n",
+    "                i += 2\n",
+    "            else:\n",
+    "                new_t.append(t[i])\n",
+    "                i += 1\n",
+    "\n",
+    "        new_tokens.append(new_t)\n",
+    "    tokens = new_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "16\n",
+      "263\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(pre_tokens_bytes))\n",
+    "print(len(tokens))\n",
+    "print(len(vocab))"
    ]
   }
  ],
