--- a/cs336_basics/tokenizer.ipynb
+++ b/cs336_basics/tokenizer.ipynb
@@ -143,23 +143,7 @@
    "outputs": [],
    "source": [
     "# Initial vocabulary: 256 single-byte tokens\n",
-    "vocab = {bytes([i]): i for i in range(256)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
-   "source": [
+    "vocab = {bytes([i]): i for i in range(256)}\n",
     "print(vocab[bytes([8])])"
    ]
   },
@@ -354,6 +338,68 @@
     "print(len(pre_tokens_bytes))\n",
     "print(len(tokens))\n",
     "print(len(vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "from multiprocessing import Pool, cpu_count\n",
+    "\n",
+    "num_processes = cpu_count()\n",
+    "print(num_processes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<\\|endoftext\\|>|<\\|pad\\|>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "special_tokens = [\"<|endoftext|>\", \"<|pad|>\"]\n",
+    "split_pattern = \"|\".join(re.escape(token) for token in special_tokens)\n",
+    "\n",
+    "print(split_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', 'world', 'example']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Hello<|endoftext|>world<|pad|>example\"\n",
+    "docs = re.split(split_pattern, text)\n",
+    "\n",
+    "print(docs)"
    ]
   }
  ],
