Still fixing BPE training!

--- a/cs336_basics/notebooks/test_bpe.ipynb
+++ b/cs336_basics/notebooks/test_bpe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "# input_path = \"../data/TinyStoriesV2-GPT4-train.txt\"\n",
     "input_path = \"../../data/TinyStoriesV2-GPT4-valid.txt\"\n",
     "# vocab_size = 10_000\n",
-    "input_path = \"../../data/sampled_50k.txt\"\n",
+    "# input_path = \"../../data/sampled_50k.txt\"\n",
     "vocab_size = 500\n",
     "special_tokens = [\"<|endoftext|>\"]\n",
     "\n",
@@ -29,7 +29,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[merge_naive] took 686.23 seconds.\n",
+      "[train_bpe] took 687.03 seconds.\n",
+      "Training completed in 11.45 minutes\n",
+      "Memory used: 0.74 GB\n",
+      "Longest token length: 18 bytes\n",
+      "Longest token (decoded): Once upon a time, \n"
+     ]
+    }
+   ],
    "source": [
     "    # Train BPE tokenizer\n",
     "    start_time = time.time()\n",
@@ -37,7 +50,8 @@
     "        input_path=input_path,\n",
     "        vocab_size=vocab_size,\n",
     "        special_tokens=special_tokens,\n",
-    "        num_processes=16  # None: use all CPUs\n",
+    "        num_processes=None,  # None: use all CPUs\n",
+    "        use_naive_merge=False\n",
     "    )\n",
     "    elapsed_time = time.time() - start_time\n",
     "\n",
